# GTS-RM

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  requirements-lock.txt
.codebase-memory/: artifact.json  graph.db.zst
MAC3_TEST/: CONTRACT.md  README.md  RELEASE_PLAN.md  __init__.py  manifest.json
liquidez_2026_checkpoint_22_3_2b/: CHECKPOINT_12_MONITOR_SCOPE_SEPARATION.md  CHECKPOINT_13_UNIFIED_FINANCIAL_BASELINES.md  CHECKPOINT_16_AGNOSTIC_AUTOENCODER_REGULARIZATION.md  CHECKPOINT_1_GLOBAL_LONG_SCHEMA.md  CHECKPOINT_21_1_1_WARNING_FREE_LOSSES.md  CHECKPOINT_21_1_GTRM_CONFIG_ARCHITECTURE.md  CHECKPOINT_21_1_VALIDATION.txt  CHECKPOINT_21_2_VALIDATION.txt  CHECKPOINT_21_3_HISTORY_EMBEDDING_EXPORT_AND_DIAGNOSTICS.md  CHECKPOINT_21_3_VALIDATION.txt  CHECKPOINT_21_4_STATIC_CONTEXT_ABLATION.md  CHECKPOINT_21_GTRM_STAGE1_REPRESENTATION_BASE.md  CHECKPOINT_22_1_VALIDATION.txt  CHECKPOINT_22_2_1_VALIDATION.txt  CHECKPOINT_22_2_3_VALIDATION.txt  CHECKPOINT_22_2_AGNOSTIC_AUXILIARY_HEADS.md  CHECKPOINT_22_3_1_STANDARDIZED_POOLED_TRAINING.md  CHECKPOINT_22_3_2B_TEMPORAL_HORIZON_SEPARATION.md  CHECKPOINT_22_3_2B_VALIDATION.txt  CHECKPOINT_22_3_2_ACTIVE_CONFIGURATION_HPO_SURFACE_HARDENING.md  CHECKPOINT_22_3_MODALITY_SPECIFIC_INPUT_ENCODERS.md  CHECKPOINT_22_3_VALIDATION.txt  CHECKPOINT_3_GLOBAL_ARCHITECTURES.md  CHECKPOINT_5_CURRICULUM_LEARNING_WITH_REPLAY.md  CHECKPOINT_8_SEEN_UNSEEN_MONITORING_AND_FINAL_GATES.md  CHECKPOINT_9_ORIGINAL_METHODOLOGY_ALIGNMENT.md  CHECKPOINT_P0_PRE_ARCHITECTURE_HARDENING.md  COMMIT_MESSAGE.txt  engineer.py  (+22 more)
(+195 files in other folders)
